src/commands/snapshots/csx__commands__new__tests__manifest_snapshot_algorithm_indexer.snap
---
source: src/commands/new.rs
expression: template_algorithm_indexer_manifest(&id).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/algorithm_indexer.json
version: v1
metadata:
  label: Sample Algorithm Indexer
  type: algorithm_indexer
  description: ''
  tags:
  - Ethereum
  - Account
datasource:
  principal: be2us-64aaa-aaaaa-qaabq-cai
  input:
    name: Transfer
    fields:
      from: String
      to: String
      value: chainsight_cdk::core::U256
  from: 17660942
  method: proxy_call
  source_type: event_indexer
  batch_size: null
output:
- name: Account
  fields:
    address: String
  output_type: key_value
timer_settings:
  interval_sec: 3600
cycles: null

