src/commands/snapshots/csx__commands__new__tests__manifest_snapshot_algorithm_lens.snap
---
source: src/commands/new.rs
expression: template_algorithm_lens_manifest(&id).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/algorithm_lens.json
version: v1
metadata:
  label: Sample Algorithm Lens
  type: algorithm_lens
  description: ''
  tags:
  - Ethereum
  - Account
datasource:
  methods:
  - label: sample_snapshot_indexer_icp
    identifier: 'get_last_snapshot : () -> (Snapshot)'
    candid_file_path: interfaces/sample.did

