src/commands/snapshots/csx__commands__new__tests__manifest_snapshot_event_indexer.snap
---
source: src/commands/new.rs
expression: template_event_indexer_manifest(&id).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/event_indexer.json
version: v1
metadata:
  label: Sample Event Indexer
  type: event_indexer
  description: ''
  tags:
  - Ethereum
  - ERC-20
  - Transfer
datasource:
  id: 0x6B175474E89094C44Da98b954EedeAC495271d0F
  event:
    identifier: Transfer
    interface: ERC20.json
  network:
    rpc_url: https://mainnet.infura.io/v3/${INFURA_MAINNET_RPC_URL_KEY}
    chain_id: 1
  from: 17660942
  contract_type: ERC-20
interval: 3600

