src/commands/snapshots/csx__commands__new__tests__manifest_snapshot_snapshot_indexer_https.snap
---
source: src/commands/new.rs
expression: template_snapshot_indexer_https_manifest(&id).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/snapshot_indexer_https.json
version: v1
metadata:
  label: Sample Snapshot Indexer Https
  type: snapshot_indexer_https
  description: ''
  tags:
  - coingecko
  - DAI
  - USD
datasource:
  url: https://api.coingecko.com/api/v3/simple/price
  headers:
    Content-Type: application/json
  queries:
    type: static
    value:
      ids: dai
      vs_currencies: usd
timer_settings:
  interval_sec: 3600
cycles: null

