src/commands/snapshots/csx__commands__new__tests__manifest_snapshot_snapshot_indexer_icp.snap
---
source: src/commands/new.rs
assertion_line: 355
expression: template_snapshot_indexer_icp_manifest(&id).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/snapshot_indexer_icp.json
version: v1
metadata:
  label: Sample Snapshot Indexer Icp
  type: snapshot_indexer_icp
  description: ''
  tags:
  - ERC-20
  - Ethereum
  - DAI
datasource:
  location:
    id: sample_snapshot_indexer_evm
    args:
      id_type: canister_name
  method:
    identifier: 'get_last_snapshot : () -> (record { value : text; timestamp : nat64 })'
    interface: null
    args: []
storage:
  with_timestamp: true
interval: 3600
lens_targets: null

